# yueswater-portfolio-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: config.py  database.py  email_service.py  main.py  models.py  schemas.py
app/routers/: about.py  auth.py  cases.py  categories.py  chat.py  portfolios.py  quotes.py  services.py  tags.py
app/services/: storage.py
